--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                         Smart Document Assistant
                     </div>
                     <div class="project-content">
-                        <h3>DocuChat AI</h3>
+                        <h3>DocChat AI</h3>
                         <p>A smart chatbot that reads your PDFs and answers questions!</p>
                         <div class="tech-tags">
                             <span class="tech-tag">RAG</span>
@@ -592,7 +592,7 @@
                             <span class="tech-tag">Pinecone</span>
                             <span class="tech-tag">Python</span>
                         </div>
-                        <a href="#" class="btn">View Project</a>
+                        <a href="https://github.com/faryasir07/AI_PDF_SUMMARIZER-CHATBOT" class="btn">View Project</a>
                     </div>
                 </div>
                 <div class="project-card">
